# Sundry

./: .gitignore  CMakeLists.txt  README.md
Callable/: CMakeLists.txt  callable.h
DisableCopy/: CMakeLists.txt
DisableCopy/src/: disable_copy.h
IntrusivePointer/: intrusive_ptr.h
MemoryResourceInspector/: CMakeLists.txt
MemoryResourceInspector/src/: main.cpp  memory_resource_inspector.h
MiniLog/src/: main.cpp
MultiThreadPool/: CMakeLists.txt  main.cpp  multi_thread_pool.h
Object/: object.h
ObjectClone/: CMakeLists.txt
ObjectClone/src/: NumericObject.h
ObjectPool/: main.cpp
Profiler/: main.cpp  scope_profiler.h
Sparse/: multi_sparse.h  sparse.h
SubscribeMode/: CMakeLists.txt
ThreadPool/: CMakeLists.txt  main.cpp  thread_pool.h
TypeErasure/: README.md
TypeErasure/src/: TypeErasure.cpp
VisitorDesignPattern/: CMakeLists.txt  README.md
ZenoObjectClone/: CMakeLists.txt
ZenoObjectClone/src/: IObject.h  NumericObject.h
src/Callable/: async_execution.h  main.cpp
src/DisableCopy/src/: Application.cpp
src/FactoryPattern/: CMakeLists.txt  factory.h  main.cpp
src/IntrusivePointer/: CMakeLists.txt  main.cpp
src/MemoryResourceInspector/src/: main.cpp  ticktock.h
src/MiniLog/: CMakeLists.txt
src/MiniLog/src/: minilog.h
src/MultiThreadQueue/: CMakeLists.txt  main.cpp  mt_queue.h
src/Object/: CMakeLists.txt  main.cpp
src/ObjectClone/: CMakeLists.txt
src/ObjectClone/src/: Application.cpp  IObject.h  api.h
src/ObjectPool/: CMakeLists.txt  object_pool.h
src/Profiler/: CMakeLists.txt
src/Reflect/: CMakeLists.txt  main.cpp  reflect.h  reflect_json.h
src/Signal/: CMakeLists.txt  main.cpp  signal.h
src/Sparse/: CMakeLists.txt  main.cpp
src/SubscribeMode/: main.cpp  subscribe.h
src/ThreadPool/: thread_pool.h
src/TypeErasure/: CMakeLists.txt
src/TypeErasure/src/: ManualVirtualDispatch.cpp
src/VisitorDesignPattern/src/: ModernSolution.cpp
src/WriteWatchGL/: CMakeLists.txt  main.cpp
